--- a/src/articles.html
+++ b/src/articles.html
@@ -114,17 +114,19 @@
                <nav class="header-bottom__nav nav-menu">
                <ul class="nav-menu__list menu-list">
                   <li class="menu-list__item">
-                     <a href="#" class="menu-list__link">Иммиграция</a>
-                  </li>
-                  <li class="menu-list__item">
-                     <a href="#" class="menu-list__link">Учеба</a>
-                  </li>
-                  <li class="menu-list__item">
-                     <a href="#" class="menu-list__link">Работа</a>
-                  </li>
-                  <li class="menu-list__item">
-                     <a href="#" class="menu-list__link">Визы</a>
-                  </li>
+                     <a href="index.html#immigrate" class="menu-list__link"
+                       >Иммиграция</a
+                     >
+                   </li>
+                   <li class="menu-list__item">
+                     <a href="index.html#learn" class="menu-list__link">Учеба</a>
+                   </li>
+                   <li class="menu-list__item">
+                     <a href="index.html#work" class="menu-list__link">Работа</a>
+                   </li>
+                   <li class="menu-list__item">
+                     <a href="index.html#vises" class="menu-list__link">Визы</a>
+                   </li>
                   <li class="menu-list__item">
                      <a href="page-courses.html" class="menu-list__link"
                      >Усуги и курсы</a
@@ -234,7 +236,7 @@
       <!-- / Header -->
 
 		<!-- Main -->
-		<main class="page__article-list article-list">
+		<main class="page__article-list article-list p-mobile">
 			<!--Section-->
 
          <section class="articles article-list__articles">
@@ -619,7 +621,7 @@
 								"
 							>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="#immigrate" class="footer-nav__link">
 										<span>Иммиграция</span>
 										<svg class="icon">
 											<use
@@ -629,7 +631,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="#learn" class="footer-nav__link">
 										<span>Учеба</span>
 										<svg class="icon">
 											<use
@@ -639,7 +641,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="#work" class="footer-nav__link">
 										<span>РАБОТА</span>
 										<svg class="icon">
 											<use
@@ -681,7 +683,7 @@
 							</ul>
 							<ul class="footer-nav__list">
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="about.html" class="footer-nav__link">
 										<span>О ПРОЕКТЕ</span>
 										<svg class="icon">
 											<use
@@ -691,7 +693,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="page-courses.html" class="footer-nav__link">
 										<span>УСЛУГИ И КУРСЫ</span>
 										<svg class="icon">
 											<use
@@ -731,7 +733,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="page-contacts.html" class="footer-nav__link">
 										<span>КОНТАКТЫ</span>
 										<svg class="icon">
 											<use
