--- a/src/index.html
+++ b/src/index.html
@@ -114,16 +114,16 @@
                   <nav class="header-bottom__nav nav-menu">
                     <ul class="nav-menu__list menu-list">
                       <li class="menu-list__item">
-                        <a href="#" class="menu-list__link">Иммиграция</a>
+                        <a href="#immigrate" class="menu-list__link js-anchor">Иммиграция</a>
                       </li>
                       <li class="menu-list__item">
-                        <a href="#" class="menu-list__link">Учеба</a>
+                        <a href="#learn" class="menu-list__link js-anchor">Учеба</a>
                       </li>
                       <li class="menu-list__item">
-                        <a href="#" class="menu-list__link">Работа</a>
+                        <a href="#work" class="menu-list__link js-anchor">Работа</a>
                       </li>
                       <li class="menu-list__item">
-                        <a href="#" class="menu-list__link">Визы</a>
+                        <a href="#vises" class="menu-list__link js-anchor">Визы</a>
                       </li>
                       <li class="menu-list__item">
                         <a href="page-courses.html" class="menu-list__link"
@@ -234,8 +234,8 @@
           <!-- / Header -->
 
 		<!-- Main -->
-		<main class="page__main main">
-			<!--Section-->
+		<main class="page__main main p-mobile">
+			<!--Section-->        
 			<section class="main__preview preview">
 				<div class="container">
 					<div class="preview__wrapper">
@@ -283,7 +283,7 @@
 				<div class="container">
 				 <div class="section-header">
 						<h2 class="popular__title title">Популярные предложения</h2>
-						<a href="#" class="link link--section">
+						<a href="page-courses.html" class="link link--section">
 							 <span>Смотреть все</span>
 							 <svg class="icon">
 									<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -463,11 +463,11 @@
 				</div>
 			</section>
 
-			<section class="main__slider slider slider--immigrate">
+			<section class="main__slider slider slider--immigrate" id="immigrate">
 				<div class="container">
 					<div class="section-header">
 						 <h2 class="section-slider__title title">Иммиграция</h2>
-						 <a href="#" class="link link--section">
+						 <a href="articles.html" class="link link--section">
 								<span>Смотреть все</span>
 								<svg class="icon">
 									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -481,7 +481,7 @@
 								 <div class="swiper-wrapper">
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/slider/slide_1.jpg" alt="no-image">
 												</picture>
@@ -494,7 +494,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/slider/slide_2.jpg" alt="no-image">
 												</picture>
@@ -507,7 +507,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/slider/slide_3.jpg" alt="no-image">
 												</picture>
@@ -520,7 +520,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/slider/slide_4.jpg" alt="no-image">
 												</picture>
@@ -533,7 +533,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/slider/slide_1.jpg" alt="no-image">
 												</picture>
@@ -637,11 +637,11 @@
 				</div>
 			</section>
 
-         <section class="main__slider slider slider--immigrate bg">
+         <section class="main__slider slider slider--immigrate bg" id="learn">
 				<div class="container">
 					<div class="section-header">
 						 <h2 class="section-slider__title title">Учеба</h2>
-						 <a href="#" class="link link--section">
+						 <a href="articles.html" class="link link--section">
 								<span>Смотреть все</span>
 								<svg class="icon">
 									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -655,7 +655,7 @@
 								 <div class="swiper-wrapper">
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -668,7 +668,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -681,7 +681,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -694,7 +694,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -707,7 +707,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -728,11 +728,11 @@
 				</div>
 			</section>
 
-         <section class="main__slider slider slider--immigrate">
+         <section class="main__slider slider slider--immigrate" id="work">
 				<div class="container">
 					<div class="section-header">
 						 <h2 class="section-slider__title title">Работа</h2>
-						 <a href="#" class="link link--section">
+						 <a href="articles.html" class="link link--section">
 								<span>Смотреть все</span>
 								<svg class="icon">
 									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -746,7 +746,7 @@
 								 <div class="swiper-wrapper">
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -759,7 +759,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -772,7 +772,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -785,7 +785,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -798,7 +798,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -819,11 +819,11 @@
 				</div>
 			</section>
 
-         <section class="main__slider slider slider--immigrate bg">
+         <section class="main__slider slider slider--immigrate bg" id="vises">
 				<div class="container">
 					<div class="section-header">
 						 <h2 class="section-slider__title title">Визы</h2>
-						 <a href="#" class="link link--section">
+						 <a href="articles.html" class="link link--section">
 								<span>Смотреть все</span>
 								<svg class="icon">
 									 <use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -837,7 +837,7 @@
 								 <div class="swiper-wrapper">
 									 <!-- Slides -->
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -850,7 +850,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -863,7 +863,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -876,7 +876,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -889,7 +889,7 @@
 										 </a>
 									 </div>
 									 <div class="swiper-slide slider__slide">
-										 <a href="#" class="slider-card">
+										 <a href="page-category-articles.html" class="slider-card">
 												<picture class="slider-card__image">
 													 <img src="images/bg-articles.jpg" alt="no-image">
 												</picture>
@@ -910,12 +910,12 @@
 				</div>
 			</section>
 
-         <section class="main__slider slider">
+         <section class="main__slider slider"> 
 				<div class="container">
 					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 details">
 						<div class="col">
 							<div class="details__header">
-								<a href="#" class="details__link">
+								<a href="articles.html" class="details__link">
 									 <span>Общее</span>
 									 <svg class="icon">
 											<use xlink:href="svg-sprite/svg-sprite.svg#arrow-link"></use>
@@ -1101,7 +1101,7 @@
 								"
 							>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="#immigrate" class="footer-nav__link">
 										<span>Иммиграция</span>
 										<svg class="icon">
 											<use
@@ -1111,7 +1111,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="#learn" class="footer-nav__link">
 										<span>Учеба</span>
 										<svg class="icon">
 											<use
@@ -1121,7 +1121,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="#work" class="footer-nav__link">
 										<span>РАБОТА</span>
 										<svg class="icon">
 											<use
@@ -1163,7 +1163,7 @@
 							</ul>
 							<ul class="footer-nav__list">
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="about.html" class="footer-nav__link">
 										<span>О ПРОЕКТЕ</span>
 										<svg class="icon">
 											<use
@@ -1173,7 +1173,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="page-courses.html" class="footer-nav__link">
 										<span>УСЛУГИ И КУРСЫ</span>
 										<svg class="icon">
 											<use
@@ -1213,7 +1213,7 @@
 									</a>
 								</li>
 								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
+									<a href="page-contacts.html" class="footer-nav__link">
 										<span>КОНТАКТЫ</span>
 										<svg class="icon">
 											<use
