--- a/src/page-courses.html
+++ b/src/page-courses.html
@@ -114,16 +114,18 @@
             <nav class="header-bottom__nav nav-menu">
               <ul class="nav-menu__list menu-list">
                 <li class="menu-list__item">
-                  <a href="#" class="menu-list__link">Иммиграция</a>
+                  <a href="index.html#immigrate" class="menu-list__link"
+                    >Иммиграция</a
+                  >
                 </li>
                 <li class="menu-list__item">
-                  <a href="#" class="menu-list__link">Учеба</a>
+                  <a href="index.html#learn" class="menu-list__link">Учеба</a>
                 </li>
                 <li class="menu-list__item">
-                  <a href="#" class="menu-list__link">Работа</a>
+                  <a href="index.html#work" class="menu-list__link">Работа</a>
                 </li>
                 <li class="menu-list__item">
-                  <a href="#" class="menu-list__link">Визы</a>
+                  <a href="index.html#vises" class="menu-list__link">Визы</a>
                 </li>
                 <li class="menu-list__item">
                   <a href="page-courses.html" class="menu-list__link"
@@ -234,7 +236,7 @@
     <!-- / Header -->
 
     <!-- Main -->
-    <main class="page__courses courses">
+    <main class="page__courses courses p-mobile">
       <!--Section-->
       <section class="courses__page-title">
         <div class="container">
@@ -718,7 +720,7 @@
                 "
               >
                 <li class="footer-nav__item">
-                  <a href="#" class="footer-nav__link">
+                  <a href="#immigrate" class="footer-nav__link">
                     <span>Иммиграция</span>
                     <svg class="icon">
                       <use
@@ -728,7 +730,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#" class="footer-nav__link">
+                  <a href="#learn" class="footer-nav__link">
                     <span>Учеба</span>
                     <svg class="icon">
                       <use
@@ -738,7 +740,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#" class="footer-nav__link">
+                  <a href="#work" class="footer-nav__link">
                     <span>РАБОТА</span>
                     <svg class="icon">
                       <use
@@ -780,7 +782,7 @@
               </ul>
               <ul class="footer-nav__list">
                 <li class="footer-nav__item">
-                  <a href="#" class="footer-nav__link">
+                  <a href="about.html" class="footer-nav__link">
                     <span>О ПРОЕКТЕ</span>
                     <svg class="icon">
                       <use
@@ -790,7 +792,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#" class="footer-nav__link">
+                  <a href="page-courses.html" class="footer-nav__link">
                     <span>УСЛУГИ И КУРСЫ</span>
                     <svg class="icon">
                       <use
@@ -830,7 +832,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#" class="footer-nav__link">
+                  <a href="page-contacts.html" class="footer-nav__link">
                     <span>КОНТАКТЫ</span>
                     <svg class="icon">
                       <use
