--- a/src/page-category-articles.html
+++ b/src/page-category-articles.html
@@ -321,6 +321,23 @@
                 труда, обучения и развития навыков Монте Макнотон, работодатели
                 по-прежнему испытывают нехватку талантливых сотрудников.
               </p>
+              <div class="articles-content__buy have-immigrate">
+                <div class="have-immigrate__content">
+                    <h4 class="have-immigrate__title">Хотите иммигрировать в Канаду, но не знаете с чего начать?</h4>
+                    <span class="have-immigrate__desc">Мы собрали 15 самых важных шагов,которые надо пройти.</span>
+                </div>
+                <span class="have-immigrate__price">
+                  <span>750 ₽</span>
+                  <span>$10 CAD</span>
+                </span>
+                <div class="have-immigrate__buy">
+                  <button class="btn have-immigrate__btn">Купить</button>
+                  <button class="btn have-immigrate__btn">Подробнее</button>
+                </div>
+                <picture class="have-immigrate__book">
+                  <img src="images/book-123.png" alt="no-image">
+                </picture>
+              </div>
               <p>
                 Напомним, что 22 сентября правительство провинции направило 72
                 приглашения кандидатам на иммиграцию. Розыгрыш проходил для
