--- a/src/articles.html
+++ b/src/articles.html
@@ -10,7 +10,7 @@
 <div class="page">
 	<div class="page__box">
       <!-- Header -->
-      <header class="page__header header">
+      <header class="page__header header header--mb70">
          <!-- Header Top-->
          <div class="header-top">
          <div class="container">
