--- a/src/index.html
+++ b/src/index.html
@@ -1013,7 +1013,6 @@
 				</div>
 			</section>
 
-
          <section class="main__project project">
             <div class="container">
                <div class="project__wrapper grid">
@@ -1071,8 +1070,8 @@
                      </div>
 
                      <div class="form-invite__buttons">
-                        <button class="btn btn--max">Зарегестироваться</button>
-                        <button class="btn btn--max">Войти в аккаунт</button>
+                        <button type="button" class="btn btn--max">Зарегестироваться</button>
+                        <a href="Enter-user.html" class="btn btn--max">Войти в аккаунт</a>
                      </div>
                   </form>
                </div>
