--- a/src/page-contacts.html
+++ b/src/page-contacts.html
@@ -10,7 +10,7 @@
 <div class="page">
   <div class="page__box">
     <!-- Header -->
-    <header class="page__header header">
+    <header class="page__header header header--mb70">
       <!-- Header Top-->
       <div class="header-top">
         <div class="container">
@@ -362,7 +362,9 @@
 
                 <div class="form-invite__buttons">
                   <button class="btn btn--max">Зарегестироваться</button>
-                  <button class="btn btn--max">Войти в аккаунт</button>
+                  <a href="Enter-user.html" class="btn btn--max"
+                    >Войти в аккаунт</a
+                  >
                 </div>
               </form>
             </div>
