--- a/src/Enter-user.html
+++ b/src/Enter-user.html
@@ -301,7 +301,7 @@
                 "
               >
                 <li class="footer-nav__item">
-                  <a href="#immigrate" class="footer-nav__link">
+                  <a href="index.html#immigrate" class="footer-nav__link">
                     <span>Иммиграция</span>
                     <svg class="icon">
                       <use
@@ -311,7 +311,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#learn" class="footer-nav__link">
+                  <a href="index.html#learn" class="footer-nav__link">
                     <span>Учеба</span>
                     <svg class="icon">
                       <use
@@ -321,7 +321,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#work" class="footer-nav__link">
+                  <a href="index.html#work" class="footer-nav__link">
                     <span>РАБОТА</span>
                     <svg class="icon">
                       <use
