--- a/src/about.html
+++ b/src/about.html
@@ -447,7 +447,7 @@
                 "
               >
                 <li class="footer-nav__item">
-                  <a href="#immigrate" class="footer-nav__link">
+                  <a href="index.html#immigrate" class="footer-nav__link">
                     <span>Иммиграция</span>
                     <svg class="icon">
                       <use
@@ -457,7 +457,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#learn" class="footer-nav__link">
+                  <a href="index.html#learn" class="footer-nav__link">
                     <span>Учеба</span>
                     <svg class="icon">
                       <use
@@ -467,7 +467,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#work" class="footer-nav__link">
+                  <a href="index.html#work" class="footer-nav__link">
                     <span>РАБОТА</span>
                     <svg class="icon">
                       <use
