--- a/src/articles.html
+++ b/src/articles.html
@@ -606,199 +606,199 @@
 		<!-- / Main -->
 
 		<!-- Footer -->
-		<footer class="page__footer footer">
-			<div class="footer__top">
-				<div class="container">
-					<div class="footer__wrapper">
-						<a href="index.html" class="footer__logo">
-							<img src="images/logo-2nd.png" alt="no-logo" />
-						</a>
-						<nav class="footer__nav footer-nav">
-							<ul
-								class="footer-nav__list"
-								style="
-									background: url(images/map.png) center / contain no-repeat;
-								"
-							>
-								<li class="footer-nav__item">
-									<a href="#immigrate" class="footer-nav__link">
-										<span>Иммиграция</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#learn" class="footer-nav__link">
-										<span>Учеба</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#work" class="footer-nav__link">
-										<span>РАБОТА</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
-										<span>ОЦЕНКА ШАНСОВ</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
-										<span>ТЕСТ АНГЛИЙСКОГО</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
-										<span>ТЕСТ ФРАНЦУЗСКОГО</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
-							<ul class="footer-nav__list">
-								<li class="footer-nav__item">
-									<a href="about.html" class="footer-nav__link">
-										<span>О ПРОЕКТЕ</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="page-courses.html" class="footer-nav__link">
-										<span>УСЛУГИ И КУРСЫ</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
-										<span>каталог бизнесов</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
-										<span>ВАКАНСИИ</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="#" class="footer-nav__link">
-										<span>БЛОГ</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-								<li class="footer-nav__item">
-									<a href="page-contacts.html" class="footer-nav__link">
-										<span>КОНТАКТЫ</span>
-										<svg class="icon">
-											<use
-												xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
-											></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
-						</nav>
-						<div class="footer__social social">
-							<div class="social__wrapper">
-								<ul class="social__list">
-									<li class="social__item">
-										<a href="#" class="social__link">
-											<svg class="icon icon--fb">
-												<use xlink:href="svg-sprite/svg-sprite.svg#fb"></use>
-											</svg>
-										</a>
-									</li>
-									<li class="social__item">
-										<a href="#" class="social__link">
-											<svg class="icon icon--vk">
-												<use xlink:href="svg-sprite/svg-sprite.svg#vk"></use>
-											</svg>
-										</a>
-									</li>
-									<li class="social__item">
-										<a href="#" class="social__link">
-											<svg class="icon icon--inst">
-												<use xlink:href="svg-sprite/svg-sprite.svg#inst"></use>
-											</svg>
-										</a>
-									</li>
-									<li class="social__item">
-										<a href="#" class="social__link">
-											<svg class="icon icon--tm">
-												<use xlink:href="svg-sprite/svg-sprite.svg#tm"></use>
-											</svg>
-										</a>
-									</li>
-								</ul>
-								<a href="#" class="social__youtb youtb">
-									<img src="images/youtb.svg" alt="no-image" />
-								</a>
-							</div>
-							<a href="mailto:mail@immigrant.today" class="social__mail"
-								>mail@immigrant.today</a
-							>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="footer__bottom">
-				<div class="container">
-					<div class="footer__info">
-						<span class="footer__copyright">© 2015-2021 Imigrant.Today</span>
-						<div class="footer__doc">
-							<a href="#">Условия использования</a>
-							<a href="#">Политика конфиденциальности</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
+      <footer class="page__footer footer">
+         <div class="footer__top">
+           <div class="container">
+             <div class="footer__wrapper">
+               <a href="index.html" class="footer__logo">
+                 <img src="images/logo-2nd.png" alt="no-logo" />
+               </a>
+               <nav class="footer__nav footer-nav">
+                 <ul
+                   class="footer-nav__list"
+                   style="
+                     background: url(images/map.png) center / contain no-repeat;
+                   "
+                 >
+                   <li class="footer-nav__item">
+                     <a href="index.html#immigrate" class="footer-nav__link">
+                       <span>Иммиграция</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="index.html#learn" class="footer-nav__link">
+                       <span>Учеба</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="index.html#work" class="footer-nav__link">
+                       <span>РАБОТА</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="#" class="footer-nav__link">
+                       <span>ОЦЕНКА ШАНСОВ</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="#" class="footer-nav__link">
+                       <span>ТЕСТ АНГЛИЙСКОГО</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="#" class="footer-nav__link">
+                       <span>ТЕСТ ФРАНЦУЗСКОГО</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                 </ul>
+                 <ul class="footer-nav__list">
+                   <li class="footer-nav__item">
+                     <a href="about.html" class="footer-nav__link">
+                       <span>О ПРОЕКТЕ</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="page-courses.html" class="footer-nav__link">
+                       <span>УСЛУГИ И КУРСЫ</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="#" class="footer-nav__link">
+                       <span>каталог бизнесов</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="#" class="footer-nav__link">
+                       <span>ВАКАНСИИ</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="#" class="footer-nav__link">
+                       <span>БЛОГ</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                   <li class="footer-nav__item">
+                     <a href="page-contacts.html" class="footer-nav__link">
+                       <span>КОНТАКТЫ</span>
+                       <svg class="icon">
+                         <use
+                           xlink:href="svg-sprite/svg-sprite.svg#arrow-right"
+                         ></use>
+                       </svg>
+                     </a>
+                   </li>
+                 </ul>
+               </nav>
+               <div class="footer__social social">
+                 <div class="social__wrapper">
+                   <ul class="social__list">
+                     <li class="social__item">
+                       <a href="#" class="social__link">
+                         <svg class="icon icon--fb">
+                           <use xlink:href="svg-sprite/svg-sprite.svg#fb"></use>
+                         </svg>
+                       </a>
+                     </li>
+                     <li class="social__item">
+                       <a href="#" class="social__link">
+                         <svg class="icon icon--vk">
+                           <use xlink:href="svg-sprite/svg-sprite.svg#vk"></use>
+                         </svg>
+                       </a>
+                     </li>
+                     <li class="social__item">
+                       <a href="#" class="social__link">
+                         <svg class="icon icon--inst">
+                           <use xlink:href="svg-sprite/svg-sprite.svg#inst"></use>
+                         </svg>
+                       </a>
+                     </li>
+                     <li class="social__item">
+                       <a href="#" class="social__link">
+                         <svg class="icon icon--tm">
+                           <use xlink:href="svg-sprite/svg-sprite.svg#tm"></use>
+                         </svg>
+                       </a>
+                     </li>
+                   </ul>
+                   <a href="#" class="social__youtb youtb">
+                     <img src="images/youtb.svg" alt="no-image" />
+                   </a>
+                 </div>
+                 <a href="mailto:mail@immigrant.today" class="social__mail"
+                   >mail@immigrant.today</a
+                 >
+               </div>
+             </div>
+           </div>
+         </div>
+         <div class="footer__bottom">
+           <div class="container">
+             <div class="footer__info">
+               <span class="footer__copyright">© 2015-2021 Imigrant.Today</span>
+               <div class="footer__doc">
+                 <a href="#">Условия использования</a>
+                 <a href="#">Политика конфиденциальности</a>
+               </div>
+             </div>
+           </div>
+         </div>
+       </footer>
 		<!-- / Footer -->
 	</div>
 </div>
