--- a/src/close.html
+++ b/src/close.html
@@ -370,7 +370,7 @@
                 "
               >
                 <li class="footer-nav__item">
-                  <a href="#immigrate" class="footer-nav__link">
+                  <a href="index.html#immigrate" class="footer-nav__link">
                     <span>Иммиграция</span>
                     <svg class="icon">
                       <use
@@ -380,7 +380,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#learn" class="footer-nav__link">
+                  <a href="index.html#learn" class="footer-nav__link">
                     <span>Учеба</span>
                     <svg class="icon">
                       <use
@@ -390,7 +390,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#work" class="footer-nav__link">
+                  <a href="index.html#work" class="footer-nav__link">
                     <span>РАБОТА</span>
                     <svg class="icon">
                       <use
