--- a/src/page-contacts.html
+++ b/src/page-contacts.html
@@ -394,7 +394,7 @@
                 "
               >
                 <li class="footer-nav__item">
-                  <a href="#immigrate" class="footer-nav__link">
+                  <a href="index.html#immigrate" class="footer-nav__link">
                     <span>Иммиграция</span>
                     <svg class="icon">
                       <use
@@ -404,7 +404,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#learn" class="footer-nav__link">
+                  <a href="index.html#learn" class="footer-nav__link">
                     <span>Учеба</span>
                     <svg class="icon">
                       <use
@@ -414,7 +414,7 @@
                   </a>
                 </li>
                 <li class="footer-nav__item">
-                  <a href="#work" class="footer-nav__link">
+                  <a href="index.html#work" class="footer-nav__link">
                     <span>РАБОТА</span>
                     <svg class="icon">
                       <use
