add section comment

--- a/src/page-category-articles.html
+++ b/src/page-category-articles.html
@@ -447,6 +447,116 @@
                   </div>
                 </div>
               </div>
+
+              <div class="category__comment comments">
+               <div class="comments__header">
+                  <div class="comments__count">Комментарии (3)</div>
+                  <button type="button" class="btn btn--comments">Добавить</button>
+               </div>
+               <div class="comments__new new-comment">
+                  <textarea class="new-comment__input input" name="new-comment" id="new-comment" placeholder="Комментарий"></textarea>
+                  <button type="button" class="btn new-comment__btn">Отправить</button>
+               </div>
+               <div class="comments__block">
+                  <div class="comments__item comment">
+                     <div class="comment__author author">
+                        <picture class="author__photo">
+                           <img src="images/author/comment-author-1.jpg" alt="author">
+                        </picture>
+                        <div class="author__info">
+                           <span class="author__name">Николай Молчан</span>
+                           <span class="author__date">4 дня назад 00:29</span>
+                        </div>
+                     </div>
+                     <p>
+                        Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                     </p>
+                     <div class="comment__answer answer">
+                        <label for="answer" class="answer__label">Ответить</label>
+                        <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
+                     </div>
+                  </div>
+
+                  <div class="comments__item comment">
+                     <div class="comment__author author">
+                        <picture class="author__photo">
+                           <img src="images/author/comment-author-2.jpg" alt="author">
+                        </picture>
+                        <div class="author__info">
+                           <span class="author__name">Людмила Фролова</span>
+                           <span class="author__date">4 дня назад 00:29</span>
+                        </div>
+                     </div>
+                     <p>
+                        Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                     </p>
+                     <div class="comment__answer answer">
+                        <label for="answer" class="answer__label">Ответить</label>
+                        <textarea name="answer" id="answer" class="answer__input"></textarea>
+                     </div>
+                  </div>
+
+                  <div class="comments__item comment">
+                     <div class="comment__author author">
+                        <picture class="author__photo">
+                           <img src="images/author/comment-author-3.jpg" alt="author">
+                        </picture>
+                        <div class="author__info">
+                           <span class="author__name">Влад Крылов</span>
+                           <span class="author__date">4 дня назад 00:29</span>
+                        </div>
+                     </div>
+                     <p>
+                        Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                     </p>
+                     <div class="comment__answer answer">
+                        <label for="answer" class="answer__label">Ответить</label>
+                        <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
+                     </div>
+                     <div class="subcomments">
+                        <div class="subcomments__item comment">
+                           <div class="comment__author author">
+                              <picture class="author__photo">
+                                 <img src="images/author/comment-author-4.jpg" alt="author">
+                              </picture>
+                              <div class="author__info">
+                                 <span class="author__name">Василий Смирнов</span>
+                                 <span class="author__date">4 дня назад 00:29</span>
+                              </div>
+                           </div>
+                           <p>
+                              Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                           </p>
+                           <div class="comment__answer answer">
+                              <label for="answer" class="answer__label">Ответить</label>
+                              <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
+                           </div>
+                        </div>
+
+                        <div class="subcomments__item comment">
+                           <div class="comment__author author">
+                              <picture class="author__photo">
+                                 <img src="images/author/comment-author-5.jpg" alt="author">
+                              </picture>
+                              <div class="author__info">
+                                 <span class="author__name">Эдуард Белов</span>
+                                 <span class="author__date">4 дня назад 00:29</span>
+                              </div>
+                           </div>
+                           <p>
+                              Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                           </p>
+                           <div class="comment__answer answer">
+                              <label for="answer" class="answer__label">Ответить</label>
+                              <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+
+                  <button type="button" class="btn btn--show-more">Показать еще</button>
+               </div>
+             </div>
             </div>
             <article class="article-detail__section section-articles">
               <div class="section-articles__box">
@@ -770,7 +880,7 @@
 						<!-- pagination -->
 						<div class="swiper-pagination popular-slider-pagination"></div>
 				</div>
-			</section>
+		</section>
       <!--/ Section-->
 
       <!--Popup--><!--/ Popup-->
