add functional comment and GoBack function

--- a/src/Enter-user.html
+++ b/src/Enter-user.html
@@ -240,7 +240,7 @@
       <!--Section-->
       <section class="account__box">
         <div class="container">
-          <a href="index.html" class="account__back">
+          <a onclick="goBack()" class="account__back">
             <svg class="icon">
               <use xlink:href="svg-sprite/svg-sprite.svg#arrow-bott"></use>
             </svg>
