--- a/src/page-category-articles.html
+++ b/src/page-category-articles.html
@@ -468,9 +468,17 @@
                            <span class="author__date">4 дня назад 00:29</span>
                         </div>
                      </div>
-                     <p>
-                        Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
-                     </p>
+                     <div class="author__comment">
+                        <p>
+                           Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                        </p>
+                        <div class="author__like like">
+                           <svg class="icon">
+                              <use xlink:href="svg-sprite/svg-sprite.svg#heart"></use>
+                           </svg> 
+                           <span class="like__count">1</span>
+                        </div>
+                     </div>
                      <div class="comment__answer answer">
                         <label for="answer" class="answer__label">Ответить</label>
                         <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
@@ -487,9 +495,17 @@
                            <span class="author__date">4 дня назад 00:29</span>
                         </div>
                      </div>
-                     <p>
-                        Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
-                     </p>
+                     <div class="author__comment">
+                        <p>
+                           Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                        </p>
+                        <div class="author__like like">
+                           <svg class="icon">
+                              <use xlink:href="svg-sprite/svg-sprite.svg#heart"></use>
+                           </svg> 
+                           <span class="like__count">1</span>
+                        </div>
+                     </div>
                      <div class="comment__answer answer">
                         <label for="answer" class="answer__label">Ответить</label>
                         <textarea name="answer" id="answer" class="answer__input"></textarea>
@@ -506,9 +522,17 @@
                            <span class="author__date">4 дня назад 00:29</span>
                         </div>
                      </div>
-                     <p>
-                        Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
-                     </p>
+                     <div class="author__comment">
+                        <p>
+                           Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                        </p>
+                        <div class="author__like like">
+                           <svg class="icon">
+                              <use xlink:href="svg-sprite/svg-sprite.svg#heart"></use>
+                           </svg> 
+                           <span class="like__count">1</span>
+                        </div>
+                     </div>
                      <div class="comment__answer answer">
                         <label for="answer" class="answer__label">Ответить</label>
                         <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
@@ -524,9 +548,17 @@
                                  <span class="author__date">4 дня назад 00:29</span>
                               </div>
                            </div>
-                           <p>
-                              Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
-                           </p>
+                           <div class="author__comment">
+                              <p>
+                                 Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                              </p>
+                              <div class="author__like like">
+                                 <svg class="icon">
+                                    <use xlink:href="svg-sprite/svg-sprite.svg#heart"></use>
+                                 </svg> 
+                                 <span class="like__count"></span>
+                              </div>
+                           </div>
                            <div class="comment__answer answer">
                               <label for="answer" class="answer__label">Ответить</label>
                               <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
@@ -543,9 +575,17 @@
                                  <span class="author__date">4 дня назад 00:29</span>
                               </div>
                            </div>
-                           <p>
-                              Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
-                           </p>
+                           <div class="author__comment">
+                              <p>
+                                 Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца? Душа моя озарена неземной радостью, как эти чудесные утра,которыми я наслаждаюсь от всего сердца
+                              </p>
+                              <div class="author__like like">
+                                 <svg class="icon">
+                                    <use xlink:href="svg-sprite/svg-sprite.svg#heart"></use>
+                                 </svg> 
+                                 <span class="like__count">5</span>
+                              </div>
+                           </div>
                            <div class="comment__answer answer">
                               <label for="answer" class="answer__label">Ответить</label>
                               <textarea name="answer" id="answer" cols="30" rows="10" class="answer__input"></textarea>
